--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-animated-numbers": "^0.6.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.34.1",
+    "react-vfx": "^0.5.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
